# comet

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
comet/: Cargo.toml  README.md
comet-cli/: Cargo.toml  README.md
comet-cli/src/: main.rs
comet/inc/: comet.h
comet/src/: config.rs  lib.rs  package.rs  repo.rs
docs/: galaxies.md  glossary.md  index.md  stars.md
startools/: Cargo.toml  README.md
startools/src/: main.rs
