[package]
name = "comet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['rlib', 'cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tar = "0.4.40"
sha2 = "0.10.8"
