[package]
name = "startools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "string", "env"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
comet = { path = "../comet" }
tar = "0.4.40"
sha2 = "0.10.8"
